syntax = "proto3";
package comdex.liquidation.v1beta1;

import "gogoproto/gogo.proto";

option go_package            = "github.com/comdex-official/comdex/x/liquidation/types";
option (gogoproto.equal_all) = false;
option (gogoproto.goproto_getters_all) = false;

message locked_vault {
  uint64 locked_vault_id = 1
  [ (gogoproto.customname) = "LockedVaultID", (gogoproto.moretags) = "yaml:\"id\"" ];
  uint64 vault_id = 2
      [ (gogoproto.customname) = "VaultID", (gogoproto.moretags) = "yaml:\"id\"" ];
  uint64 pair_id = 3 [
    (gogoproto.customname) = "PairID",
    (gogoproto.moretags)   = "yaml:\"pair_id\""
  ];
  string admin     = 4 [ (gogoproto.moretags) = "yaml:\"owner\"" ];
  string vault_owner     = 5 [ (gogoproto.moretags) = "yaml:\"vault_owner\"" ];

  string amount_in = 6 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.moretags)   = "yaml:\"amount_in\"",
    (gogoproto.nullable)   = false
  ];
  string amount_out = 7 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.moretags)   = "yaml:\"amount_out\"",
    (gogoproto.nullable)   = false
  ];
}
